# LLM_API

./: .env.example  .gitignore  README.md  YAML预设功能模块分析报告.md  convert_tavern_presets.py  pyproject.toml  requirements.txt  test_run.py  test_run_.py  test_run_gemini.py  test_run_openlist.py  usage_log.db
archive/llm_gemini_api/: __init__.py  _utils.py  adapter.py  builder.py  client.py  config.py  exceptions.py  file_utils.py  format.py  parser.py  preset_loader.py  recorder.py  tavern_converter.py
archive/llm_oai_api/: __init__.py  adapter.py  builder.py  client.py  config.py  exceptions.py  format.py  models.py  parser.py  recorder.py
data/: gemini_usage_log.db  openai_usage_log.db
docs/: gemini-pypackage.md  gemini.md  openlist.md
gemini/: __init__.py  adapter.py  builder.py  client.py  config.py  file_utils.py  format.py  preset_loader.py  tavern_converter.py
llm/: __init__.py  config.py  exceptions.py  macros.py  models.py  parser.py  recorder.py  utils.py
llm/preset_module/: YAML预设功能模块分析报告.md
llm_api/: adapter.py  builder.py  client.py  config.py  exceptions.py  llm_api.py  models.py  parser.py
llm_gemini_api/: MULTIMODAL_GUIDE.md  __init__.py  adapter.py  builder.py  client.py  config.py  file_utils.py  format.py  models.py  parser.py  preset_loader.py  recorder.py  tavern_converter.py
llm_oai_api/: __init__.py  _utils.py  builder.py  format.py  recorder.py
openai/: __init__.py  adapter.py  builder.py  client.py  config.py  exceptions.py  format.py
openlist_api/: __init__.py  client.py  config.py  exceptions.py  utils.py
scripts/: llm_api.py
(+36 files in other folders)
